--- a/index.html
+++ b/index.html
@@ -9,7 +9,72 @@
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	
+
+<!-- start of jumbotron -->
+<div class="jumbotron">
+		<img class="hero" src="img/hero.jpg" alt="hero">
+</div>
+<!-- Start of Products -->
+	<div class="container">
+		<div class="row">
+			<!-- Start of Featured Text -->
+			<div class="col-md-7">
+				<h1 class="text-uppercase">featured</h1>
+				<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, facere, voluptas? Fuga veritatis laboriosam voluptas suscipit iusto repudiandae nihil recusandae impedit eos harum sapiente optio tenetur, quis numquam voluptatibus culpa.</p>
+				<!-- End of Featured Text -->
+				<!-- Start of Dog Bowl -->
+				<div class="row">
+				  <div class="col-sm-6 col-md-4">
+				    <div class="thumbnail">
+				      <img src="img\product1.jpg" alt="DogBowl">
+				      <div class="caption">
+				        <h3>Dog Bowl</h3>
+				        <p>the best dog bowl for your dog.</p>
+				        <p><a href="#" class="btn btn-primary" role="button">Purchase now</a></p>
+				      </div>
+				    </div>
+				  </div>
+					<!-- End of Dog Bowl -->
+					<!-- Start of Cat Toy -->
+				  <div class="col-sm-6 col-md-4">
+				    <div class="thumbnail">
+				      <img src="img/product2.jpg" alt="Cat Toy">
+				      <div class="caption">
+				        <h3>Cat Toy</h3>
+				        <p>The best cat toy for your favorite cat.</p>
+				        <p><a href="#" class="btn btn-primary" role="button">Purchase now</a></p>
+				      </div>
+				    </div>
+				  </div>
+					<!-- End of Cat Toy -->
+					<!-- Start of Parrot Stuff -->
+					  <div class="col-sm-6 col-md-4">
+					    <div class="thumbnail">
+					      <img src="img/product3.jpg" alt="Parrot Stuff">
+					      <div class="caption">
+					        <h3>Parrot Stuff</h3>
+					        <p>The best parrot stuff for your parrot.</p>
+					        <p><a href="#" class="btn btn-primary" role="button">Purchase now</a></p>
+					      </div>
+					    </div>
+					  </div>
+						<!-- End of Parrot Stuff -->
+					</div><!-- End of Thumbnail Row -->
+			</div><!-- End of Featured -->
+			<div class="col-md-3 services text-center">
+							<h1>Services</h1>
+							<h4>Adopt a Cat</h4>
+							<p1>lorem ipsum dolor sit amet, consectetus adipsiicing elit.</p1>
+							<h4>Adopt a Dog</h4>
+							<p1>lorem ipsum dolor sit amet, consectetus adipsiicing elit.</p1>
+							<h4>Adopt a Parrot</h4>
+							<p1>lorem ipsum dolor sit amet, consectetus adipsiicing elit.</p1>
+						</div>
+
+			</div>
+		</div>
+	</div>
+
 	<!-- scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
